add paragraph list table

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </div>
         <!-- Images -->
         <div>
-            <img src="img/tim-1.jpg" alt="image1">
-            <img src="img/tim-2.jpg" alt="image2">
+            <img src="img/tim-1.jpg" alt="image1" class="image" >
+            <img src="img/tim-2.jpg" alt="image2" class="image" >
             <div class="credits">
                 1st Photo: jonh S. and James L Knight foundantion, by Scott Henrichsen <br>
                 2st Photo: Wikipedia, by paul clarke
             </div>
         </div>
-        <!--  -->
+        <!-- paragraph -->
         <section>
             <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
             Delectus sint aperiam veniam quia iure ipsa officia et numquam 
@@ -44,6 +44,7 @@
             dolorum. Maiores aspernatur esse ratione nihil nesciunt.
             </p>
         </section>
+        <!-- list -->
         <section>
             <ul>
                 <li>
@@ -56,6 +57,44 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum amet voluptate sed numquam, culpa dolorem minima saepe iste tempore inventore libero dolorum rem velit, aperiam laborum iusto ex pariatur. Sed?
                 </li>
             </ul>
+        </section>
+        <!-- table -->
+        <section>
+            <table>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum totam voluptatibus enim eius architecto, placeat tenetur soluta, asperiores facilis repellat cupiditate ratione dolor? Iusto explicabo ratione voluptas nesciunt ducimus quasi!</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto deleniti, nostrum maiores provident quas, possimus nemo aperiam quidem quae fugit molestiae quis inventore laboriosam ab veniam reprehenderit aspernatur debitis? Sequi!</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et fugit sequi reiciendis eaque odio asperiores ea similique. Alias natus officia accusamus animi, placeat tempora amet saepe eum cupiditate libero voluptates?</td>
+                </tr>
+            </table>
+        </section>
+        <!-- paragraph -->
+        <section>
+            <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+            Delectus sint aperiam veniam quia iure ipsa officia et numquam 
+            nesciunt reiciendis a deleniti iusto, odio blanditiis error. 
+            <mark>
+                Impedit praesentium sint quia? Lorem ipsum dolor sit amet,
+            </mark> 
+            consectetur adipisicing elit. Velit, iusto non alias nulla in 
+            animi, rerum beatae numquam sequi omnis, veniam sint soluta 
+            dolorum. Maiores aspernatur esse ratione nihil nesciunt.
+            </p>
         </section>
 
 
