add bottom contents and fix some css things

--- a/index.html
+++ b/index.html
@@ -96,13 +96,19 @@
             dolorum. Maiores aspernatur esse ratione nihil nesciunt.
             </p>
         </section>
-
+        <section>
+            <div class="autor">Potrebbero interessarti</div>
+            <div class="image">
+                <img src="img/monitor.jpg" alt="image3">
+                <div class="onimage">Lorem ipsum dolor</div>
+            </div>
+            <div class="image">
+                <img src="img/graph.jpg" alt="image4">
+                <div class="onimage">Lorem ipsum dolor</div>
+            </div>
+        </section>
 
     </main>
-    <!-- context -->
-    <!-- footer -->
-    <footer>
-
-    </footer>
+ 
 </body>
 </html>
