add div conteiner to main and logo

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <!-- header -->
     <header>
-        <img class="logo" src="img/logo.svg" alt="logo">
+        <div class="conteiner">
+            <img class="logo" src="img/logo.svg" alt="logo">
+        </div>
     </header>
     <main>
+        <div class="conteiner">
     <!-- titles -->
         <div class="maintitle">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
@@ -107,7 +110,7 @@
                 <div class="onimage">Lorem ipsum dolor</div>
             </div>
         </section>
-
+        </div>
     </main>
  
 </body>
